--- a/doc/operating-system/linux/parrot-security-OS/开发环境搭建.md
+++ b/doc/operating-system/linux/parrot-security-OS/开发环境搭建.md
@@ -4,6 +4,27 @@
 
 ### python
 
+### 安装系统 python 需要的相关依赖
+
+```bash
+sudo apt-get install libbz2-dev libreadline-dev libsqlite3-dev wget curl -y
+sudo apt-get install make build-essential libssl-dev zlib1g-dev -y
+```
+
+### pip 国内源
+
+```bash
+mkdir ~/.pip
+touch ~/.pip/pip.conf
+```
+
+```conf
+[global] 
+index-url = https://pypi.tuna.tsinghua.edu.cn/simple
+[install]
+trusted-host = https://pypi.tuna.tsinghua.edu.cn
+```
+
 #### 多版本管理 pyenv
 
 ```bash
