--- a/doc/operating-system/linux/parrot-security-OS/安装配置.md
+++ b/doc/operating-system/linux/parrot-security-OS/安装配置.md
@@ -27,21 +27,20 @@ sudo apt-get dist-upgrade
 
 `sudo apt-get install emacs25`
 
+#### 安装截图工具
+`sudo apt-get install flameshot`
 
 #### 安装谷歌拼音
 
 `sudo apt-get install fcitx-googlepinyin`
 
+#### 安装chromium浏览器
+
+`sudo apt-get install chromium chromium-l10n`
 
 #### 软件包安装
 
 `sudo dpkg -i <***.deb>`
-
-
-#### 安装chromium浏览器
-
-`sudo apt-get install chromium`
-
 
 #### 配置ssh
 
